--- a/resources/html/public/post.html
+++ b/resources/html/public/post.html
@@ -22,7 +22,7 @@
             </div>
         </article>
 
-        <form class="submission__write col" action="/api/v1/comment/create?redirect={{ url | urlencode }}" method="post">
+        <form class="submission__write col" action="/comment/create?redirect={{ url | urlencode }}" method="post">
             <input type="hidden" name="post" value="{{post.id}}"/>
             <textarea class="write__field" name="body" placeholder="Leave a comment" required></textarea>
             <button class="write__button clickable">Submit</button>
