--- a/resources/html/profile/feed.html
+++ b/resources/html/profile/feed.html
@@ -17,7 +17,7 @@
                 <nav class="row m5 p5 f1">
                     <span class="">{{ post.created | date(format="%d/%m/%g %l:%M %P") }}</span> 
                     {% if post.view_id == session.view %}
-                    <form action="/api/v1/posts/delete?redirect={{route | urlencode}}" method="post" class="l">
+                    <form action="/posts/delete?redirect={{route | urlencode}}" method="post" class="l">
                         <input type="hidden" name="value" value="{{post.id}}"/>
                         <button class="clickable" type="submit">delete</button>
                     </form>
