Removing from local machine

--- a/resources/html/macros.html
+++ b/resources/html/macros.html
@@ -1,6 +1,5 @@
-
-{#  Breadcrumb builder
-    This macro generates a breadcrumb on submission pages given a post id,
+{#  Breadcrumb component
+    This component generates a breadcrumb on submission pages given a post id,
     a path of 'crumbs' (comment ids) and the current comment.
 #}
 {% macro breadcrumbs(top,crumbs,bottom) %}
